# wgpu-text

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
examples/: ctx.rs  custom_matrix.rs  custom_surface.rs  depth.rs  depth.rs.wip  draw_chain.rs  fonts.rs  fragment.glsl  fragment.spirv  performance.rs  render_queue.rs  scissoring.rs  simple.rs  utils.rs  vertex.glsl  vertex.spirv
examples/custom_output/: custom_output.rs  pipeline.rs
examples/custom_output/shaders/: fragment.frag.wgsl  fragment.glsl.spv  vertex.glsl.spv  vertex.vert.wgsl
examples/custom_surface/: camera.rs  custom_surface.rs  pipeline.rs
examples/custom_target/: camera.rs  custom_target.rs  pipeline.rs
src/: brush.rs  buffer.rs  cache.rs  error.rs  lib.rs  pipeline.rs  text.wgsl  uniform.rs  vertex.rs
src/internal/: brush.rs  mod.rs  pipeline.rs
src/shader/: shader.wgsl  text.wgsl
