[package]
name = "wgpu_text"
authors = ["Leon (Blatko1)"]
version = "26.0.0"
edition = "2024"
description = "A simple 2D text renderer for wgpu."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Blatko1/wgpu-text"
keywords = ["wgpu", "text", "ttf", "render", "font"]
categories = ["graphics", "rendering"]
include = ["src/**/*", "LICENSE", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
wgpu = "26.0.1"
glyph_brush = "0.7.12"
log = "0.4.27"
bytemuck = { version = "1.22.0", features = ["derive"] }

[dev-dependencies]
wgpu = { version = "26.0.1", features = ["spirv"] }
winit = "0.30.9"
pollster = "0.4.0"
env_logger = "0.11.8"
rand = "0.9.0"
nalgebra = "0.33.2"

[[example]]
path = "examples/custom_target/custom_target.rs"
name = "custom_target"
