[package]
name = "wgpu_text"
authors = ["Leon (Blatko1)"]
version = "29.0.0"
edition = "2024"
description = "A simple 2D text renderer for wgpu."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Blatko1/wgpu-text"
keywords = ["wgpu", "text", "ttf", "render", "font"]
categories = ["graphics", "rendering"]
include = ["src/**/*", "LICENSE", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
wgpu = "29.0.0"
glyph_brush = "0.7.12"
log = "0.4.29"
bytemuck = { version = "1.25.0", features = ["derive"] }

[dev-dependencies]
wgpu = { version = "29.0.0", features = ["spirv"] }
winit = "0.30.13"
pollster = "0.4.0"
env_logger = "0.11.9"
rand = "0.10.0"
nalgebra = "0.34.1"

[[example]]
path = "examples/custom_target/custom_target.rs"
name = "custom_target"
